refactor: getNewsFeedBatch , PostCacheRepository, UserCacheRepository, migrations