@@ -6,18 +6,17 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.redisson.api.RLock;
 import org.redisson.api.RedissonClient;
-import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.cache.annotation.CachePut;
-import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.redis.core.Cursor;
 import org.springframework.data.redis.core.RedisCallback;
 import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.ScanOptions;
 import org.springframework.stereotype.Repository;
 
 import java.time.Duration;
-import java.util.Collection;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -31,37 +30,59 @@ public class PostCacheRepository {
     private final RedisCacheProperties prop;
     private final RedissonClient redissonClient;
 
-    @Cacheable(value = "#{redisCacheProperties.postsCacheName}", key = "#postId")
     public PostCacheDto getPostCache(long postId) {
-        log.info("Post with ID {} not found in cache", postId);
-        return null;
+        String cacheKey = generateKey(postId);
+        Object cachedValue = redisTemplate.opsForValue().get(cacheKey);
+        if (cachedValue == null) {
+            return null;
+        }
+        return (PostCacheDto) cachedValue;
     }
 
-    @CachePut(value = "#{redisCacheProperties.postsCacheName}", key = "#postCacheDto.postId")
-    public PostCacheDto savePostCache(PostCacheDto postCacheDto) {
+    public void savePostCache(PostCacheDto postCacheDto) {
+        String cacheKey = generateKey(postCacheDto.getPostId());
         String lockKey = "lock:post:" + postCacheDto.getPostId();
         RLock lock = redissonClient.getLock(lockKey);
+        long ttlInSeconds = Duration.ofHours(prop.getPostsHoursTtl()).toSeconds();
+
         try {
             if (lock.tryLock(10, 5, TimeUnit.SECONDS)) {
                 try {
-                    return postCacheDto;
+                    redisTemplate.opsForValue().set(cacheKey, postCacheDto, ttlInSeconds, TimeUnit.SECONDS);
                 } finally {
                     lock.unlock();
                 }
             } else {
-                throw new IllegalStateException("Failed to acquire lock");
+                throw new IllegalStateException("Failed to acquire lock for post with id: " + postCacheDto.getPostId());
             }
         } catch (InterruptedException e) {
-            throw new RuntimeException("Error during awaiting locking", e);
+            Thread.currentThread().interrupt();
+            throw new RuntimeException("Error during locking for post with id: " + postCacheDto.getPostId(), e);
         }
     }
 
-    @CacheEvict(value = "#{redisCacheProperties.postsCacheName}", key = "#postId")
     public void deletePostCache(long postId) {
+        String cacheKey = generateKey(postId);
+        String lockKey = "lock:post:" + postId;
+        RLock lock = redissonClient.getLock(lockKey);
+
+        try {
+            if (lock.tryLock(10, 5, TimeUnit.SECONDS)) {
+                try {
+                    redisTemplate.delete(cacheKey);
+                } finally {
+                    lock.unlock();
+                }
+            } else {
+                throw new IllegalStateException("Failed to acquire lock for post with id: " + postId);
+            }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new RuntimeException("Error during locking for post with id: " + postId, e);
+        }
     }
 
     public void saveBatchPostsToCache(Set<PostCacheDto> posts) {
-        String cachePrefix = prop.getPostsCacheName() + "::";
         long ttlInSeconds = Duration.ofHours(prop.getPostsHoursTtl()).toSeconds();
 
         for (PostCacheDto post : posts) {
@@ -72,7 +93,7 @@ public class PostCacheRepository {
                 if (lock.tryLock(10, 5, TimeUnit.SECONDS)) {
                     try {
                         redisTemplate.executePipelined((RedisCallback<Object>) connection -> {
-                            String key = cachePrefix + post.getPostId();
+                            String key = generateKey(post.getPostId());
                             redisTemplate.opsForValue().set(key, post, ttlInSeconds, TimeUnit.SECONDS);
                             return null;
                         });
@@ -90,10 +111,9 @@ public class PostCacheRepository {
     }
 
     public Set<PostCacheDto> getBatchPostsCaches(List<Long> postsIds, List<Long> postsIdsMissedInCache) {
-        String cachePrefix = prop.getPostsCacheName() + "::";
         List<String> keys = postsIds.stream()
-                .map(postId -> cachePrefix + postId)
-                .collect(Collectors.toList());
+                .map(this::generateKey)
+                .toList();
         List<Object> cachedPosts = redisTemplate.opsForValue().multiGet(keys);
 
         for (int i = 0; i < cachedPosts.size(); i++) {
@@ -108,15 +128,32 @@ public class PostCacheRepository {
                 .collect(Collectors.toSet());
     }
 
-    public List<PostCacheDto> getAllCachesPostsWithPagination(int limit, long offset) {
-        return Optional.ofNullable(redisTemplate.keys(prop.getPostsCacheName() + "*"))
-                .stream()
-                .flatMap(Collection::stream)
-                .skip(offset)
-                .limit(limit)
-                .map(key -> redisTemplate.opsForValue().get(key))
-                .filter(Objects::nonNull)
-                .map(post -> (PostCacheDto) post)
-                .collect(Collectors.toList());
+    public List<PostCacheDto> getAllCachesPosts(int size, long page) {
+        List<PostCacheDto> posts = new ArrayList<>();
+        long currentIndex = 0;
+
+        try (Cursor<Map.Entry<Object, Object>> cursor = redisTemplate.opsForHash()
+                .scan(prop.getPostsCacheName(), ScanOptions.scanOptions().count(size).build())) {
+
+            while (cursor.hasNext()) {
+                Map.Entry<Object, Object> entry = cursor.next();
+
+                if (currentIndex++ < page) {
+                    continue;
+                }
+
+                posts.add((PostCacheDto) entry.getValue());
+                if (posts.size() >= size) {
+                    break;
+                }
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to fetch posts from cache", e);
+        }
+        return posts;
+    }
+
+    private String generateKey(long postId) {
+        return prop.getPostsCacheName() + postId;
     }
 }
